--- a/package.json
+++ b/package.json
@@ -1,12 +1,11 @@
 {
-  "name": "TimelineLogger",
+  "name": "timeline-logger",
   "version": "0.0.1",
   "description": "A NodeJs timeline logger tool for generating timeline json files for viewing in the chrome browser",
   "engines": {
     "node": "0.10",
     "npm": "1.3"
   },
-  "main": "src/TimelineLogger.coffee",
   "dependencies": {
      "coffee-script":"~1.6.3"
   },
@@ -15,5 +14,5 @@
     "test.debug": "node --debug-brk test/out/AllTests.js",
     "debug": "node --debug-brk out/TimelineLogger.js"
   },
-  "main": "node out/TimelineLogger.js"
+  "main": "./out/TimelineLogger"
 }
